Pilot fixes (#38)
* cleaning up navbar code, flipping car and chips in words.csv

* Fixing missing dv_placeholder.gif in depth.html targetImage containers

* Fixed definition task not showing target word

* Fixing bug in breadth task where the images and image types were not being registered correctly

* Preventing blank definitions

* Showing logged in child ID

* Fixed issue with persistent task progress after logging in with different child ID

* Fixing broken placeholder gifs

* Fixed bootstrap navbar, compactified breadth task layout a bit, removed end.html

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -6,7 +6,7 @@
 
 #playButton {
     background-repeat: no-repeat;
-    width:50px;
-    height:50px;
-    background-size: 50px 50px;
+    width:35px;
+    height:35px;
+    background-size: 35px 35px;
 }
